# hecate-escriba

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml
assets/css/: default.css
templates/example_template/: README.md  styles.css  template.html  validator.py
tests/: test_example_template.py
