[project]
name = "document-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "weasyprint>=66.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]
